# gk-authenticator-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: main.rs  otp.rs  store.rs
src/command/: add.rs  delete.rs  list.rs  mod.rs  view.rs
