[package]
name = "gk-authenticator"
version = "0.1.0"
authors = ["Gaurav Kumar <gauravsingh12341@gmail.com>"]
repository = "https://github.com/gausk/gk-authenticator-rs"
homepage = "https://github.com/gausk/gk-authenticator-rs"
readme = "README.md"
license = "MIT"
description = "A command line OTP authenticator app"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
data-encoding = "2.9.0"
ring = "0.17.14"
serde = {  version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"